--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clef",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Discord Music Bot",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.2.0",
+    "discord.js-commando": "^0.10.0",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
