--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clef",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Discord Music Bot",
   "main": "index.js",
   "scripts": {
@@ -11,10 +11,11 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.2.0",
-    "discord.js-commando": "^0.10.0",
+    "discord.js-commando": "github:discordjs/Commando",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
+    "simple-youtube-api": "^5.2.1",
     "ytdl-core": "^2.1.7"
   }
 }
